Added absencerequest table